[package]
name = "dupin"
authors = ["Andrew Repp <rust@andrewrepp.com>"]
description = "A port scanner in rust. Inspired by nmap and masscan."
version = "0.0.0"
edition = "2021"
license = "Unlicense/MIT"
keywords = ["ports", "nmap", "masscan", "scanner"]
documentation = "https://github.com/ReppCodes/dupin"
homepage = "https://github.com/ReppCodes/dupin"
repository = "https://github.com/ReppCodes/dupin"

[dependencies]
